added footer to the contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/styles/style.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7"
+        crossorigin="anonymous">
 
 </header>
 
@@ -33,18 +37,18 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#AboutMe">
-                        <span id="about-me-link">About Me</span>
+                    <a class="nav-link" href="#Meet Belle">
+                        <span id="about-me-link">Meet Belle</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="services-link" href="#Services">Services</a>
+                    <a class="nav-link" id="services-link" href="#Offerings">Offerings</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
-                </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" id="contact-link" href="/contact">Contact</a>
+                    <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="contact-link" href="/contact">Let's Connect</a>
                 </li>
             </ul>
         </div>
@@ -84,7 +88,7 @@
                     </div>
 
                     <div class="row">
-                            <div class="col-6 col-md-6">
+                        <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Phone number</label>
                                 <input type="tel" class="form-control form-control-sm" id="phoneNum" placeholder="Ex: 954-123-4567">
@@ -98,7 +102,7 @@
                         </div>
                     </div>
                     <div class="row">
-                            <div class="col-6 col-md-6">
+                        <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">How many weeks are you?</label>
                                 <input type="number" class="form-control form-control-sm" id="weeks" placeholder="Ex: 34">
@@ -113,7 +117,7 @@
                         </div>
                     </div>
                     <div class="row">
-                            <div class="col-6 col-md-6">
+                        <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="Textarea">Anything you would like to add...</label>
                                 <textarea class="form-control form-control-sm" id="Textarea" rows="3"></textarea>
@@ -148,25 +152,113 @@
                         <button type="button" class="btn btn-outline-secondary" id="submitForm">Submit</button>
                     </p>
                 </div>
-
-
-
-
             </div>
         </div>
 
-
-    </div>
-
-
-
     </div>
 
     </div>
     </div>
+    </div>
+    <!-- THIS IS MY FOOTER-->
 
+    <footer id="main-footer">
+        <div class="container" id="footer-container">
 
+            <!-- Logo row -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <img id="logofooter" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
+                </div>
+            </div>
 
+            <!-- Social Media row -->
+            <div class="row">
+                <div class="col-lg-4 col-md-4"></div>
+                <div class="col-lg-4 col-md-4 text-center" id="socialMedia">
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/BeautifulBirthsbyBelle/">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/doula_belle/">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            <i class="fab fa-yelp"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            <i class="fab fa-pinterest-square"></i>
+                        </a>
+                    </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-4"></div>
+            </div>
+
+            <!-- Footer Menu Row -->
+            <div class="row">
+                <div class="col-lg-4 col-md-4"></div>
+                <div class="col-lg-4 col-md-4 text-center" id="footerMenu">
+                    <li class="list-inline-item">
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Home
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Meet Belle
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Offerings
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Readings
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="">
+                            Let's Connect
+                        </a>
+                    </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-4"></div>
+            </div>
+            <hr>
+
+            <!-- Contact Info Row -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12" class="myInfo" id="footerContactInfo">
+                    <h2>Beautiful Births Doula Services</h2>
+                    <p class="myInfo">hello@beautifulbirthsbybelle ~ Business: 954-866-3668 || Cell: 863-991-0961</p>
+                    <p class="myInfo">4026 Inverrary Boulevard, Lauderhill, FL 33319</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 text-center">
+                    <button type="button" class="btn btn-sm" id="AdminBtn">Access Admin</button>
+                </div>
+            </div>
+
+            <!-- Copyright Row -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <p id="copyright"> Copyright © 2018 beautifulbirthsbybelle | All rights reserved.</p>
+                </div>
+            </div>
+    </footer>
 </body>
 
 </html>
