--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,6 @@
                         <span id="about-me-link">Meet Belle</span>
                     </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" id="services-link" href="#Offerings">Offerings</a>
                 </li>
@@ -64,8 +63,8 @@
                     <img id="logo" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
                     <h1 class="display-1">Beautiful Births</h1>
                     <blockquote class="blockquote">
-                        <footer class="blockquote-footer">by
-                            <cite title="Source Title">Belle</cite>
+                        <footer class="blockquote-footer">
+                            <cite title="Source Title">Doula Services</cite>
                         </footer>
                     </blockquote>
                 </div>
@@ -124,7 +123,7 @@
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Giving Birth should be your greatest achivement, not your
                                         greatest fear."
-                                        </hp>
+                                        </p>
                                         <footer class="blockquote-footer">
                                             <cite title="Source Title">Jane Weideman</cite>
                                         </footer>
@@ -132,11 +131,12 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+
             </div>
         </div>
     </div>
+
     <div id="HomeBirthInfo">
         <h1>This is where I am going to put I am not really sure what actually.</h1>
     </div>
@@ -146,14 +146,14 @@
     <footer id="main-footer">
         <div class="container" id="footer-container">
 
-            //Logo row
+            <!-- Logo row -->
             <div class="row">
                 <div class="col-lg-12 col-md-12">
                     <img id="logofooter" src="/images/BeautifulBirthsLogo.png" href="#home" alt="Beautiful Births by Belle">
                 </div>
             </div>
 
-            //Social Media row
+            <!-- Social Media row -->
             <div class="row">
                 <div class="col-lg-4 col-md-4"></div>
                 <div class="col-lg-4 col-md-4 text-center" id="socialMedia">
@@ -182,7 +182,7 @@
                 <div class="col-lg-4 col-md-4"></div>
             </div>
 
-            //Footer Menu Row
+            <!-- Footer Menu Row -->
             <div class="row">
                 <div class="col-lg-4 col-md-4"></div>
                 <div class="col-lg-4 col-md-4 text-center" id="footerMenu">
@@ -219,7 +219,7 @@
             </div>
             <hr>
 
-            //Contact Info Row
+            <!-- Contact Info Row -->
             <div class="row">
                 <div class="col-lg-12 col-md-12" class="myInfo" id="footerContactInfo">
                     <h2>Beautiful Births Doula Services</h2>
@@ -233,7 +233,7 @@
                 </div>
             </div>
 
-            //Copyright Row
+            <!-- Copyright Row -->
             <div class="row">
                 <div class="col-lg-12 col-md-12">
                     <p id="copyright"> Copyright © 2018 beautifulbirthsbybelle | All rights reserved.</p>
