Added modal on click for Admin access.

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"We have a secret in our culture, it's not that birth is painful,
                                         it's that women are strong."
-                                        </hp>
+                                        </p>
                                         <footer class="blockquote-footer">
                                             <cite title="Source Title">Laura Stavoe Harm</cite>
                                         </footer>
@@ -98,7 +98,7 @@
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Most women need encouraging and companionship more than they
                                         need drugs."
-                                        </hp>
+                                        </p>
                                         <footer class="blockquote-footer">
                                             <cite title="Source Title">Ina May Gaskin</cite>
                                         </footer>
@@ -110,7 +110,7 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Birth is the epicenter of women's power."
-                                        </hp>
+                                        </p>
                                         <footer class="blockquote-footer">
                                             <cite title="Source Title">Ani DiFranco</cite>
                                         </footer>
@@ -123,10 +123,10 @@
                                 <blockquote class="blockquote">
                                     <p class="carousel-quotes">"Giving Birth should be your greatest achivement, not your
                                         greatest fear."
-                                        </p>
-                                        <footer class="blockquote-footer">
-                                            <cite title="Source Title">Jane Weideman</cite>
-                                        </footer>
+                                    </p>
+                                    <footer class="blockquote-footer">
+                                        <cite title="Source Title">Jane Weideman</cite>
+                                    </footer>
                                 </blockquote>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
     </div>
 
     <!-- THIS IS MY FOOTER-->
-    
+
     <footer id="main-footer">
         <div class="container" id="footer-container">
 
@@ -227,9 +227,20 @@
                     <p class="myInfo">4026 Inverrary Boulevard, Lauderhill, FL 33319</p>
                 </div>
             </div>
+
+            <!-- Admin Button Access -->
             <div class="row">
                 <div class="col-lg-12 col-md-12 text-center">
                     <button type="button" class="btn btn-sm" id="AdminBtn">Access Admin</button>
+                </div>
+            </div>
+
+            <!-- Admin Login Modal -->
+            <div id="adminLoginModal" class="modal">
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>Some text in the Modal..</p>
                 </div>
             </div>
 
@@ -240,6 +251,7 @@
                 </div>
             </div>
     </footer>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
