--- a/public/test-contactShow.html
+++ b/public/test-contactShow.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <header>
     <meta charset="utf-8" />
@@ -28,7 +28,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Our Script -->
-    <script src="/js/main.js"></script>        
+    <!-- <script src="/js/main.js"></script>  -->       
 
 </header>
 
