modal show fixed, add some features on style css

--- a/public/test-contactShow.html
+++ b/public/test-contactShow.html
@@ -28,7 +28,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Our Script -->
-    <!-- <script src="/js/main.js"></script>  -->       
+    <script src="/js/main.js"></script>        
 
 </header>
 
@@ -60,7 +60,7 @@
                             <a class="nav-link" id="readings-link" href="readings.html">Readings</a>
                         </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" id="contact-link" href="/contact">Contact</a>
+                    <a class="nav-link" id="contact-link" href="/contact">Let's Connect</a>
                 </li>
             </ul>
         </div>
