--- a/public/index.html
+++ b/public/index.html
@@ -260,7 +260,7 @@
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary">Login</button>
+                                    <button type="submit" class="btn btn-secondary">Login</button>
                                     <!-- <button type="button" class="btn btn-secondary close" data-dismiss="modal">Close</button> -->
                                 </div>
                             </div>
