--- a/public/contact.html
+++ b/public/contact.html
@@ -91,13 +91,13 @@
                         <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Phone number</label>
-                                <input type="tel" class="form-control form-control-sm" id="phoneNum" placeholder="Ex: 954-123-4567">
+                                <input type="tel" class="form-control form-control-sm" id="phoneNumber" placeholder="Ex: 954-123-4567">
                             </div>
                         </div>
                         <!-- <div class="col-sm-2 col-xs-2">col</div> -->
                         <div class="col-6 col-md-6">
                             <div class="form-group">Email address</label>
-                                <input type="email" class="form-control form-control-sm" id="emailAddress" placeholder="Ex: email@noemail.com.">
+                                <input type="email" class="form-control form-control-sm" id="email" placeholder="Ex: email@noemail.com.">
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                         <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="dueDate">What is your estimated due date?</label>
-                                <input type="date" class="form-control form-control-sm" id="EDD" placeholder="">
+                                <input type="date" class="form-control form-control-sm" id="dueDate" placeholder="">
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <p class="lead">
-                        <button type="button" class="btn btn-outline-secondary" id="submitForm">Submit</button>
+                        <button type="button" class="btn btn-outline-secondary" id="submitBtn">Submit</button> <!-- Don't change this ID please -->
                     </p>
                 </div>
             </div>
@@ -259,6 +259,8 @@
                 </div>
             </div>
     </footer>
+
+    <script src="/js/contact.js"></script>
 </body>
 
 </html>
