--- a/public/contact.html
+++ b/public/contact.html
@@ -120,7 +120,7 @@
                         <div class="col-6 col-md-6">
                             <div class="form-group">
                                 <label for="Textarea">Anything you would like to add...</label>
-                                <textarea class="form-control form-control-sm" id="Textarea" rows="3"></textarea>
+                                <textarea class="form-control form-control-sm" id="message" rows="3"></textarea>
                             </div>
                         </div>
                         <!-- <div class="col-sm-2 col-xs-2"> col</div> -->
