--- a/public/contact.html
+++ b/public/contact.html
@@ -129,19 +129,19 @@
                                 <legend>How would you like to be contacted?</legend>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optionsRadios" id="emailContact" value="option1" checked="">                                        By
+                                        <input type="radio" class="form-check-input" name="optionsRadios" id="emailContact" value="e-mail" checked="">                                        By
                                         email.
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optionsRadios" id="phoneContact" value="option2">                                        By
+                                        <input type="radio" class="form-check-input" name="optionsRadios" id="phoneContact" value="Phone">                                        By
                                         phone.
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optionsRadios" id="textMessContact" value="option3">                                        By
+                                        <input type="radio" class="form-check-input" name="optionsRadios" id="textMessContact" value="SMS">                                        By
                                         text-message.
                                     </label>
                                 </div>
