submit button w modal, fixed nav links

--- a/public/calendly.html
+++ b/public/calendly.html
@@ -53,135 +53,12 @@
             </ul>
         </div>
     </nav>
-    <div class="container" id="contactForm-container">
-        <div class="row " id="row-container-top">
 
+    <!-- Calendly inline widget begin -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/tabladaraul/beatiful-births-doula-services" style="min-width:320px;height:580px;"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+    <!-- Calendly inline widget end -->
 
-            <!-- JUMBOTRON FORM  -->
-
-            <div class="jumbotron jumbotron-fluid">
-                <h1 class="display-4">Let's connect!</h1>
-                <p class="lead">Hiring a doula is an important decision and I am sure you have a lot of question and that's
-                    GOOD!.
-                </p>
-                <hr class="my-4">
-                <p>Now is time to provide you with the answers you are looking for and I am here for that. You can call me,
-                    text me or email me.
-                    <br> I also invite you to fill out the contact form. At the end, you would get a chance to schedule our
-                    first meet up.
-                </p>
-                <div class="container" id="jumbotron-contact">
-                    <div class="row">
-                        <div class="col-6 col-md-6">
-                            <div class="form-group">
-                                <label for="firstName">First Name</label>
-                                <input type="text" class="form-control form-control-sm" id="firstName" placeholder="Ex: Jane">
-                            </div>
-                        </div>
-                        <!-- <div class="col-sm-2 col-xs-2">col</div> -->
-                        <div class="col-6 col-md-6">
-                            <div class="form-group">
-                                <label for="lastName">Last Name</label>
-                                <input type="text" class="form-control form-control-sm" id="lastName" placeholder="Ex: Smith">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-6 col-md-6">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Phone number</label>
-                                <input type="tel" class="form-control form-control-sm" id="phoneNumber" placeholder="Ex: 954-123-4567">
-                            </div>
-                        </div>
-                        <!-- <div class="col-sm-2 col-xs-2">col</div> -->
-                        <div class="col-6 col-md-6">
-                            <div class="form-group">Email address</label>
-                                <input type="email" class="form-control form-control-sm" id="email" placeholder="Ex: email@noemail.com.">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-md-6">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">How many weeks are you?</label>
-                                <input type="number" class="form-control form-control-sm" id="weeks" placeholder="Ex: 34">
-                            </div>
-                        </div>
-                        <!-- <div class="col-sm-2 col-xs-2">col</div> -->
-                        <div class="col-6 col-md-6">
-                            <div class="form-group">
-                                <label for="dueDate">What is your estimated due date?</label>
-                                <input type="date" class="form-control form-control-sm" id="dueDate" placeholder="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-md-6">
-                            <div class="form-group">
-                                <label for="Textarea">Anything you would like to add...</label>
-                                <textarea class="form-control form-control-sm" id="message" rows="3"></textarea>
-                            </div>
-                        </div>
-                        <!-- <div class="col-sm-2 col-xs-2"> col</div> -->
-                        <div class="col-6 col-md-6">
-                            <fieldset class="form-group">
-                                <legend>How would you like to be contacted?</legend>
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optionsRadios" id="emailContact" value="e-mail" checked="">                                        By
-                                        email.
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optionsRadios" id="phoneContact" value="Phone">                                        By
-                                        phone.
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="optionsRadios" id="textMessContact" value="SMS">                                        By
-                                        text-message.
-                                    </label>
-                                </div>
-                            </fieldset>
-                        </div>
-                    </div>
-                    <p class="lead">
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#contactModal" id="submitBtn">Submit</button>
-
-                        <!-- Modal -->
-                        <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Beautiful Births Appointments</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">Would you like to schedule a 1 hour session?</div>
-                                    <div class="modal-footer">
-                                        <a class="btn btn-secondary" href="index.html" id="noBtn">No</a>
-                                        <a class="btn btn-primary" href="calendly.html" id="yesBtn">Yes</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </p>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    </div>
-
-    </div>
-    </div>
-    </div>
     <!-- THIS IS MY FOOTER-->
 
     <footer id="main-footer">
