--- a/public/contact.html
+++ b/public/contact.html
@@ -150,22 +150,22 @@
                     </div>
                     <p class="lead">
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#contactModal" id="submitBtn">Submit</button>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#clientTable" id="submitBtn">Submit</button>
 
                         <!-- Modal -->
-                        <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="clientTable" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Beautiful Births Appointments</h5>
+                                        <h5 class="modal-title" id="contactModalLabel">Beautiful Births Appointments</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
                                     <div class="modal-body">Would you like to schedule a 1 hour session?</div>
                                     <div class="modal-footer">
-                                        <a class="btn btn-secondary" href="index.html" id="noBtn">No</a>
-                                        <a class="btn btn-primary" href="calendly.html" id="yesBtn">Yes</a>
+                                        <a class="btn btn-secondary" href="index.html" data-target="#clientTable" id="noBtn">No</a>
+                                        <a class="btn btn-primary" data-target="#clientTable" id="yesBtn">Yes</a>
                                     </div>
                                 </div>
                             </div>
